Added more notes.

--- a/html5-summary.html
+++ b/html5-summary.html
@@ -139,7 +139,11 @@
 
 					<section>
 						<header><h1>Chapter 5: Semantics</h1></header>
-							<h1>Extensibiliity</h1>
+							<h2>Extensibiliity</h2>
+                            <p>Extensibility is about adding more semantic value to elements using the class attribute. This class attribut can be used by browers if they follow the agreed conventions.</p>
+                            
+                            <h2>Microformats</h2>
+                            <p>Microformats are a set of conventions which are agreed upon by a community.They are used with classes to extend the HTML5 attributes. However, they are limited by design. They solve 80% of the use cases with 20% of the effort.</p>
 							<p>mark</p>
 								<p>Search results for 'unicorn'</p>
 								<ol>
