Added some notes on Using HTML% today.

--- a/html5-summary.html
+++ b/html5-summary.html
@@ -141,10 +141,10 @@
 						<header><h1>Chapter 5: Semantics</h1></header>
 							<h2>Extensibiliity</h2>
                             <p>Extensibility is about adding more semantic value to elements using the class attribute. This class attribut can be used by browers if they follow the agreed conventions.</p>
-                            
+
                             <h2>Microformats</h2>
                             <p>Microformats are a set of conventions which are agreed upon by a community.They are used with classes to extend the HTML5 attributes. However, they are limited by design. They solve 80% of the use cases with 20% of the effort.</p>
-							<p>mark</p>
+							<p>Mark- this is used to highlight a search item. For example</p>
 								<p>Search results for 'unicorn'</p>
 								<ol>
 								<li><a href="http://clearleft.com/">
@@ -153,15 +153,16 @@
 								</a></li>
 								</ol>
 
-							<p>Meter</p>
+							<p><em>Meter</em</p>
 								<meter>9 out of 10 cats</meter>
+
 								<meter max="10">9 cats</meter>
 								<meter low="-273" high="100" min="12" max="30" »
 								optimum="21" value="25">
 								It's quite warm for this time of year.
 								</meter>
 
-							<p>Progress</p>
+							<p><em>Progress</em> This is </p>
 								Your profile is <progress>60%</progress> complete.
 							<progress min="0" max="100" value="60"></progress>
 							<h1>Structure</h1>
@@ -176,7 +177,22 @@
 					</section>
 
 					<section>
-						<header>Chapter 6: Using HTML5 Today</header>
+						<header><h1>Chapter 6: Using HTML5 Today<h1></header>
+                        <ol>
+                            <li>Today, not all element in HTML5 are supported by all browsers. However, this does not hinder someone from using them</li>
+                            <li>Browsers don't support default styling for most of the elemnts.</li>
+                            <li>Browsers are also yet to support heading levels of HTML5’s new outline algorithm but are still available for use..</li>
+                            <li>Accessible Rich Internet Applications (ARIA) can be used to support assistive technology.</li>
+                            <li><em>Validation </em> is a powerful tool but needs to be used wisely.</li>
+                            <li>Some <em>featur detection</em> sites can be used to determine if a feature is supported by your browser.For example:</li>
+                            <a>
+                                <ol>
+                                    <li>http://www.html5rocks.com/en/</li>
+                                    <li>http://html5test.com/</li>
+                                    <li>http://caniuse.com/</li>
+                                </ol>
+                        </ol></a>
+
 							<p></p>
 
 					</section>
