Made changes to the video tag.

--- a/html5-summary.html
+++ b/html5-summary.html
@@ -9,7 +9,9 @@
     <hr>
 	<section>
 		<section>
-			<header><h2>Chapter 1: A brief History of Markup</h2></header>
+			<header>
+                <h2>Chapter 1: A brief History of Markup</h2>
+            </header>
 				<article>
 					<p>HTML5 was formed by a bunch of rebels from the W3C who formed 
 					Hypertext Application Technology Working Group,(WHATWG).HTML5 replaced XHTML which is now almost dead.
@@ -21,7 +23,9 @@
 		</section>
 
 		<section>
-			<header><h2>Chapter 2: The Design of HTML5</h2></header>
+			<header>
+                <h2>Chapter 2: The Design of HTML5</h2>
+            </header>
 				<article>
 					<h3>The design principles</h3>
 						<p>These are key principles that guide the development of the HTML5 development</p>
@@ -77,14 +81,15 @@
 						<p>Similar to audio. Only differnce is the poster placeholder. This is still not very widely supported though.</p>
 
 						<h5>Video Example</h5>
+                        <video src="http://techslides.com/demos/sample-videos/small.mp4" controls width="360" height="240">
+</video>
 								<video controls width="360" height="240" »poster="placeholder.jpg">
-								<source src="movie.ogv" type="video/ogg">
-								<source src="movie.mp4" type="video/mp4">
+								<source src="https://www.youtube.com/watch?v=IsXEVQRaTX8" type="video/mp4">
 								<object type="application/x-shockwave-flash" »
 								width="360" height="240" »
-								data="player.swf?file=movie.mp4">
-								<param name="movie" » value="player.swf?file=movie.mp4">
-								<a href="movie.mp4">Download the movie</a>
+								data="https://www.youtube.com/watch?v=IsXEVQRaTX8">
+								<param name="movie" » value="https://www.youtube.com/watch?v=IsXEVQRaTX8">
+								<a href="https://www.youtube.com/watch?v=IsXEVQRaTX8">Download the movie</a>
 								</object>
 							</video>
 				</article>
