Made changes in the video tag.

--- a/html5-summary.html
+++ b/html5-summary.html
@@ -81,17 +81,8 @@
 						<p>Similar to audio. Only differnce is the poster placeholder. This is still not very widely supported though.</p>
 
 						<h5>Video Example</h5>
-                        <video src="http://techslides.com/demos/sample-videos/small.mp4" controls width="360" height="240">
-</video>
-								<video controls width="360" height="240" »poster="placeholder.jpg">
-								<source src="https://www.youtube.com/watch?v=IsXEVQRaTX8" type="video/mp4">
-								<object type="application/x-shockwave-flash" »
-								width="360" height="240" »
-								data="https://www.youtube.com/watch?v=IsXEVQRaTX8">
-								<param name="movie" » value="https://www.youtube.com/watch?v=IsXEVQRaTX8">
-								<a href="https://www.youtube.com/watch?v=IsXEVQRaTX8">Download the movie</a>
-								</object>
-							</video>
+                        <video src="http://techslides.com/demos/sample-videos/small.mp4" controls width="360" height="240"></video>
+								
 				</article>
 				
 		</section>
