Made changes to the audio tag.

--- a/html5-summary.html
+++ b/html5-summary.html
@@ -52,8 +52,7 @@
 						<p>With HTML5 one can be able to embed an audio. It is very simple to do that. You can also be able to have autoplay, buffering which can all be turned on or off. How cool!
 						</p>
 						<h5>Audio Example with buttons</h5>
-						<audio id="player" src="witchitalineman.mp3">
-						</audio>
+						<audio src=http://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3 controls> </audio> 
 						<div>
 							<button »
 								onclick="document.getElementById('player').play()"> 
