Made changes according to validator

--- a/html5-summary.html
+++ b/html5-summary.html
@@ -54,21 +54,21 @@
 						<h5>Audio Example with buttons</h5>
 						<audio src=http://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3 controls> </audio> 
 						<div>
-							<button »
+							<button 
 								onclick="document.getElementById('player').play()"> 
 								Play
 							</button>
-							<button »
+							<button 
 								onclick="document.getElementById('player').pause()"> 
 								Pause
 							</button>
-							<button »
-								onclick="document.getElementById('player').volume »
+							<button 
+								onclick="document.getElementById('player').volume 
 								+= 0.1">
 								Volume Up
 							</button>
-							<button »
-								onclick="document.getElementById('player').volume »
+							<button 
+								onclick="document.getElementById('player').volume 
 								-= 0.1">
 								Volume Down
 							</button>
@@ -134,7 +134,7 @@
 
         				<h4>Spinners with type = "number"</h4>
         					<label for="amount">How much?</label>
-        					<input id="amount" name="amount" type="number" »
+        					<input id="amount" name="amount" type="number" 
         					min="5" max="20">
 
         				<h4>Date and time (Not yet implemented in Firefox)</h4>
