Made more changes.

--- a/html5-summary.html
+++ b/html5-summary.html
@@ -92,7 +92,7 @@
 
 				<p><strong>Placeholders</strong> are used a when form field has no value. However some browsers do not support it yet hence need to use Javascript to check. Example: </p>
 				<label for="email">Email</label>
-					<input id="email" name="email" type="text" »
+					<input id="email" name="email" type="text" 
 					placeholder="example@info.com">
 
 				<h4>Autofocus</h4>
@@ -154,7 +154,7 @@
                             <p>Microformats are a set of conventions which are agreed upon by a community.They are used with classes to extend the HTML5 attributes. However, they are limited by design. They solve 80% of the use cases with 20% of the effort.</p>
 							<ul>
                             <li><em>Mark</em> this is used to highlight a search item. For example</li>
-								<p>Search results for 'unicorn'</p>
+								<li>Search results for 'unicorn'</li>
 								<ol>
 								<li><a href="http://clearleft.com/">
 									Riding the UX <mark>unicorn</mark> across »
@@ -162,7 +162,7 @@
 								</a></li>
 								</ol>
 
-							<li><em>Meter</em> marks up measurements which have a scale of min and max.</li>
+							<li><em>Meter</em> marks up measurements which have a scale of min and max.
 								<meter>9 out of 10 cats</meter>
 
 								<meter max="10">9 cats</meter>
@@ -170,7 +170,7 @@
 								optimum="21" value="25">
 								It's quite warm for this time of year.
 								</meter>
-
+                            </li>
 							<li><em>Progress</em> marks up a value that is in the process of changing.
                             <p>This is 
 								Your profile is <progress>60%</progress> complete.
